# lazy

./: .gitignore  Cargo.toml  commands.md  config.nix  devenv.nix  example_existing_config.nix  lazy.code-workspace  shell.nix  sysconf.code-workspace  todo.md
example/: config.nix  oz.nix  ozpc.nix  runix.rs  sources.nix  sysconf.nix  sysconf.toml  sysconf.yaml
example/old/: .stateversion  config.nix  config_experiment  hardware-configuration.nix
init/: sysconf.nix  sysconf.yaml
nix/: nixos_config.nix  rebuild.sh  result
nixos/: lazy.nix  sources.nix
nixos/hosts/ozpc/: boot.nix  default.nix  filesystems.nix  hardware.nix  networking.nix  services.nix  swapDevices.nix  system.nix
nixos/shared/: default.nix  programs.nix  users.nix
src/: config.rs  cppnix.rs  errors.rs  init.rs  main.rs  nix.rs  nixos.rs  sysconf.nix
