[package]
name = "lazy"
version = "0.1.0"
edition = "2021"
include = ["init/**"]

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
dirs = "5.0.1"
git2 = "0.19.0"
indexmap = "1.9.1"
nixel = "5.2.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.19"
xdg = "2.5.2"