[package]
name = "lazy"
version = "0.1.0"
edition = "2021"
include = ["init/**"]

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
either = "1.13.0"
nixel = "5.2.0"
rnix = "0.12.0"
rowan = "0.16.1"
serde = { version = "1.0", features = ["derive"] }
xdg = "2.5.2"
