[package]
name = "lazy"
version = "0.1.0"
edition = "2021"
include = ["init/**"]

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
either = "1.13.0"
git2 = "0.20.0"
hostname = "0.4.0"
semver = "1.0.25"
serde = "1.0.217"
serde_json = "1.0.137"
sha1 = "0.10.6"
sha2 = "0.10.8"
strsim = "0.11.1"
url = "2.5.4"
xdg = "2.5.2"
